chore: update to swagger init and redis using upstash
